fix(DLB/front): overflow hiden del scroll del fondo completo

--- a/front/src/components/ExperienciasDeBienestar/ExperienciasDeBienestar.css
+++ b/front/src/components/ExperienciasDeBienestar/ExperienciasDeBienestar.css
@@ -21,7 +21,15 @@
 .as-inner {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
+}
+.as-inner::-webkit-scrollbar {
+  display: none;
+}
+
+.as-inner {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
 /* 
 .ctTitle {
